--- a/ERP/Core.Erp.Web/Areas/Caja/Views/ConciliacionCaja/_GridViewPartial_conciliacion_caja_movimiento.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Caja/Views/ConciliacionCaja/_GridViewPartial_conciliacion_caja_movimiento.cshtml
@@ -6,6 +6,10 @@
         settings.Width = Unit.Percentage(100);
         settings.KeyFieldName = "IdCbteCble_movcaja";
 
+        //Configuración para que la grilla no muestre texto completo
+        settings.SettingsBehavior.AllowEllipsisInText = true;
+        settings.SettingsResizing.ColumnResizeMode = ColumnResizeMode.NextColumn;
+
         settings.SettingsPager.Visible = true;
         settings.Settings.ShowGroupPanel = false;
         settings.Settings.ShowFilterRow = true;
@@ -28,7 +32,7 @@
         settings.SettingsAdaptivity.AdaptiveDetailColumnCount = 1;
         settings.SettingsAdaptivity.AllowOnlyOneAdaptiveDetailExpanded = false;
         settings.SettingsAdaptivity.HideDataCellsAtWindowInnerWidth = 500;
-        
+
         settings.Columns.Add("IdCbteCble_movcaja", "# Documento").Width = Unit.Percentage(20);
         settings.Columns.Add("tm_descripcion", "Descripción").Width = Unit.Percentage(10);
         settings.Columns.Add(column => {
