--- a/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/SolicitudPago/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/SolicitudPago/Nuevo.cshtml
@@ -8,16 +8,106 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 <script src="~/Scripts/ValidacionBotonSubmit.js"></script>
-<script>
 
-    $("#GiradoA").val("");
+<script type="text/javascript">
+        $(function () {
+            $("#GiradoA").val("");
 
+        });
+        var selectedIDs;
+        function OnBeginCallback(s, e) {
+            e.customArgs["selectedIDs"] = selectedIDs;
+            e.customArgs['TransaccionFixed'] = $('#IdTransaccionSession').val();
+        };
+        function OnSelectionChanged(s, e) {
+            s.GetSelectedFieldValues("Secuencia", GetSelectedFieldValuesCallback);
+        };
+        function GetSelectedFieldValuesCallback(values) {
+            //Capture all selected keys
+            selectedIDs = values.join(',');
+        };
+
+           
+    function MostrarModalFacturas() {
+        BuscarFacturas();
+        $("#ModalFacturas").modal("show");
+    };
+    function BuscarFacturas() {
+        var datos = {
+            IdEmpresa: $("#IdEmpresa").val(),
+            IdSucursal: $("#IdSucursal").val(),
+            IdTransaccionSession: $("#IdTransaccionSession").val()
+        }
+        $.ajax({
+            type: 'POST',
+            data: JSON.stringify(datos),
+            url: '@Url.Action("GetListPorPagar", "Solicitud", new { Area = "CuentasPorPagar" })',
+            async: false,
+            bDeferRender: true,
+            bProcessing: true,
+            dataType: 'json',
+            contentType: 'application/json; charset=utf-8',
+            success: function (data) {
+                if (data == false) {
+                    alert("No existen resultados para los filtros aplicados");
+                }
+            },
+            error: function (error) {
+            }
+        });
+        GridViewPartial_aprobacion_solicitud.PerformCallback();
+    };
+
+    function AddFacturas() {
+        var datos = {
+            IDs: selectedIDs,
+            IdTransaccionSession: $("#IdTransaccionSession").val()
+        }
+        $.ajax({
+            type: 'POST',
+            data: JSON.stringify(datos),
+            url: '@Url.Action("EditingAddNew", "Solicitud", new { Area = "CuentasPorPagar" })',
+            async: false,
+            bDeferRender: true,
+            bProcessing: true,
+            dataType: 'json',
+            contentType: 'application/json; charset=utf-8',
+            success: function (data) {
+            },
+            error: function (error) {
+            }
+        });
+        selectedIDs = "";
+        GridViewPartial_aprobacion_solicitud.PerformCallback();
+        GridViewPartial_aprobacion_solicitud.UnselectRows();
+        $("#ModalFacturas").modal("hide");
+    };
 </script>
 
 @using (Html.BeginForm("Nuevo", "SolicitudPago", FormMethod.Post, new { @class = "form", @role = "form" }))
 {
-    @Html.HiddenFor(q => q.IdEmpresa)
+
+    @Html.HiddenFor(q => q.IdEmpresa, new { @id = "IdEmpresa" })
+    @Html.HiddenFor(q => q.IdTransaccionSession, new { @id = "IdTransaccionSession" })
     @Html.HiddenFor(q => q.IdSolicitud)
+    <div class="modal fade" id="ModalFacturas" role="dialog">
+        <div class="modal-dialog modal-lg">
+            <!-- Modal content-->
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    <h4 class="modal-title">Solicitudes</h4>
+                    </div>
+                </div>
+                <div class="modal-body">
+                    @Html.Action("GridViewPartial_aprobacion_solicitud")
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-primary" onclick="AddFacturas();">Aceptar</button>
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Cerrar</button>
+                </div>
+            </div>
+        </div>
 
     <div id="Tabs" role="tabpanel">
         <ul class="nav nav-tabs" role="tablist">
@@ -95,7 +185,7 @@
                         </div>
                     </div>
                 </div>
-               <div class="row">
+                <div class="row">
                     <div class="col-md-12">
                         <div class="col-md-12">
                             <div class="form-group">
@@ -109,57 +199,36 @@
             </div>
 
             <div role="tabpanel" class="tab-pane " style="margin-left: 1em;" id="tab_detalle">
+
+
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="col-md-1">
+                            <div class="form-group">
+                                <button type="button" class="btn btn-primary form-control" onclick="BuscarFacturas()" title="Buscar deudas">
+                                    <i class="fa fa-search"></i>
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
                 <div class="row">
                     <div class="col-md-12">
                         <div class="col-md-12">
                             <div class="form-group">
                                 <label for="Concepto"></label>
-                                @Html.Action("GridViewPartial_aprobacion_facturas")
-                           </div>
+                                @Html.Action("GridViewPartial_aprobacion_solicitud")
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
 
 
-            </div>
-
-
-
-
-
-
-
-
+                </div>
 
             </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
                 <div class="box-footer">
                     <button type="submit" class="btn btn-primary">Guardar</button>
