--- a/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/SolicitudPago/_GridViewPartial_aprobacion.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/SolicitudPago/_GridViewPartial_aprobacion.cshtml
@@ -2,30 +2,30 @@
 @{
     var grid = Html.DevExpress().GridView(settings =>
     {
-        settings.Name = "GridView_aprobacion_solicitud";
-        settings.CallbackRouteValues = new { Controller = "SolicitudPago", Action = "GridViewPartial_aprobacion_solicitud" };
-
-        settings.SettingsEditing.UpdateRowRouteValues = new { Controller = "SolicitudPago", Action = "EditingUpdate", Area = "CuentasPorPagar" };
-        settings.SettingsEditing.DeleteRowRouteValues = new { Controller = "SolicitudPago", Action = "EditingDelete", Area = "CuentasPorPagar" };
-
+        settings.Name = "GridViewPartial_aprobacion";
+        settings.CallbackRouteValues = new { Controller = "SolicitudPago", Action = "GridViewPartial_aprobacion" };
         settings.KeyFieldName = "Secuencia";
         settings.Width = Unit.Percentage(100);
 
-        settings.CommandColumn.Visible = true;
-        settings.CommandColumn.ShowNewButton = false;
-        settings.CommandColumn.ShowEditButton = true;
-        settings.CommandColumn.ShowDeleteButton = true;
+        settings.SettingsPager.Visible = true;
+        settings.Settings.ShowGroupPanel = false;
+        settings.Settings.ShowFilterRow = true;
+        settings.SettingsBehavior.AllowSelectByRowClick = false;
+        settings.Settings.AutoFilterCondition = AutoFilterCondition.Contains;
 
-        settings.SettingsContextMenu.Enabled = true;
-        settings.SettingsContextMenu.RowMenuItemVisibility.NewRow = false;
-        settings.SettingsBehavior.EnableCustomizationWindow = true;
+        //Configuración para que la grilla no muestre texto completo
+        settings.SettingsBehavior.AllowEllipsisInText = true;
+        settings.SettingsResizing.ColumnResizeMode = ColumnResizeMode.NextColumn;
+
+        //Configuración checkbox
+        settings.CommandColumn.Visible = true;
+        settings.CommandColumn.ShowSelectCheckbox = true;
+        settings.CommandColumn.SelectAllCheckboxMode = GridViewSelectAllCheckBoxMode.AllPages;
 
         //Configuración click derecho
         settings.SettingsContextMenu.Enabled = true;
         settings.SettingsBehavior.EnableCustomizationWindow = true;
-        settings.SettingsContextMenu.EnableRowMenu = DefaultBoolean.True;
-
-        settings.SettingsBehavior.AllowSelectByRowClick = true;
+        settings.SettingsContextMenu.EnableRowMenu = DefaultBoolean.False;
 
         //Configuracion responsive
         settings.SettingsAdaptivity.AdaptivityMode = GridViewAdaptivityMode.HideDataCellsWindowLimit;
@@ -33,7 +33,7 @@
         settings.SettingsAdaptivity.AdaptiveDetailColumnCount = 1;
         settings.SettingsAdaptivity.AllowOnlyOneAdaptiveDetailExpanded = false;
         settings.SettingsAdaptivity.HideDataCellsAtWindowInnerWidth = 500;
-        
+
         settings.Columns.Add(column =>
         {
             column.FieldName = "TipoDocumento";
@@ -78,8 +78,8 @@
             column.EditFormSettings.Visible = DefaultBoolean.False;
             column.ReadOnly = false;
         });
-        
-        
+
+
         settings.Columns.Add(column =>
         {
             column.FieldName = "Saldo_OG";
