--- a/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/Retencion/Modificar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/Retencion/Modificar.cshtml
@@ -33,7 +33,8 @@
     @Html.HiddenFor(q => q.co_subtotal_iva)
     @Html.HiddenFor(q => q.co_subtotal_siniva)
     @Html.HiddenFor(q => q.co_baseImponible)
-
+     @Html.HiddenFor(q => q.IdTipoCbte_Ogiro)
+    @Html.HiddenFor(q => q.IdCbteCble_Ogiro)
 
     <div class="row">
         <div class="col-md-12">
