--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/IngresoInventario/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/IngresoInventario/Nuevo.cshtml
@@ -1,4 +1,5 @@
 ﻿@model Core.Erp.Info.Inventario.in_Ing_Egr_Inven_Info
+@using Core.Erp.Web.Helps
 @{
     ViewBag.Title = "Nuevo ingreso";
     if (Session["IdUsuario"] == null || Session["IdEmpresa"] == null)
@@ -8,7 +9,33 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 <script src="~/Scripts/ValidacionBotonSubmit.js"></script>
+<script type="text/javascript">
+    function OnFileUploadStart(s, e) {
+        var datos = {
+            IdEmpresa: $("#IdEmpresa").val(),
+            IdTransaccionSession: $("#IdTransaccionSession").val()
+        }
+        $.ajax({
+            type: 'POST',
+            data: JSON.stringify(datos),
+            url: '@Url.Action("ActualizarVariablesSession", "Presupuesto", new { Area = "Presupuesto" })',
+            async: false,
+            bDeferRender: true,
+            bProcessing: true,
+            dataType: 'json',
+            contentType: 'application/json; charset=utf-8',
+            success: function (data) {
+            },
+            error: function (error) {
+            }
+        });
+    }
 
+    function OnFileUploadComplete(s, e)
+    {
+        GridViewPartial_inv_det.PerformCallback();
+    }
+</script>
 @using (Html.BeginForm("Nuevo", "IngresoInventario", FormMethod.Post, new { @class = "form", @role = "form" }))
 {
     @Html.HiddenFor(q => q.IdTransaccionSession, new { @id = "IdTransaccionSession" })
@@ -100,7 +127,24 @@
             </div>
         </div>
     </div>
-
+    <div class="row">
+        <div class="col-md-12">
+            <div class="col-md-6">
+                <label for="Descripcion">Importar detalle</label>
+                @Html.DevExpress().UploadControl(settings =>
+               {
+                   settings.Name = "UploadControlFile";
+                   settings.CallbackRouteValues = new { Controller = "IngresoInventario", Action = "UploadControlUpload" };
+                   settings.ShowUploadButton = true;
+                   settings.ShowProgressPanel = true;
+                   settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
+                   settings.NullText = "Selecciona el archivo...";
+                   settings.ClientSideEvents.FilesUploadStart = "OnFileUploadStart";
+                   settings.ClientSideEvents.FileUploadComplete = "OnFileUploadComplete";
+               }).GetHtml()
+            </div>
+        </div>
+    </div>
     <div class="row">
         <div class="col-md-12">
             <div class="col-md-12">
@@ -154,4 +198,4 @@ function CargarBodega() {
             }
             });
     };
-    </script>
+</script>
