--- a/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/SolicitudPago/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/SolicitudPago/Nuevo.cshtml
@@ -12,7 +12,6 @@
 <script type="text/javascript">
         $(function () {
             $("#GiradoA").val("");
-
         });
         var selectedIDs;
         function OnBeginCallback(s, e) {
@@ -55,7 +54,7 @@
             error: function (error) {
             }
         });
-        GridViewPartial_aprobacion.PerformCallback();
+        GridView_aprobacion.PerformCallback();
     };
 
     function AddFacturas() {
@@ -66,7 +65,7 @@
         $.ajax({
             type: 'POST',
             data: JSON.stringify(datos),
-            url: '@Url.Action("EditingAddNew", "SolicitudPago", new { Area = "CuentasPorPagar" })',
+            url: '@Url.Action("EditingAddNewAS", "SolicitudPago", new { Area = "CuentasPorPagar" })',
             async: false,
             bDeferRender: true,
             bProcessing: true,
@@ -78,9 +77,9 @@
             }
         });
         selectedIDs = "";
-        GridViewPartial_aprobacion.PerformCallback();
-        GridViewPartial_aprobacion.UnselectRows();
-        GridViewPartial_aprobacion_solicitud.PerformCallback();
+        GridView_aprobacion.PerformCallback();
+        GridView_aprobacion.UnselectRows();
+        GridView_aprobacion_solicitud.PerformCallback();
         $("#ModalFacturas").modal("hide");
     };
 </script>
@@ -91,6 +90,7 @@
     @Html.HiddenFor(q => q.IdEmpresa, new { @id = "IdEmpresa" })
     @Html.HiddenFor(q => q.IdTransaccionSession, new { @id = "IdTransaccionSession" })
     @Html.HiddenFor(q => q.IdSolicitud)
+
     <div class="modal fade" id="ModalFacturas" role="dialog">
         <div class="modal-dialog modal-lg">
             <!-- Modal content-->
@@ -98,8 +98,8 @@
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal">&times;</button>
                     <h4 class="modal-title">Solicitudes</h4>
-                    </div>
                 </div>
+
                 <div class="modal-body">
                     @Html.Action("GridViewPartial_aprobacion")
                 </div>
@@ -109,6 +109,7 @@
                 </div>
             </div>
         </div>
+    </div>
 
     <div id="Tabs" role="tabpanel">
         <ul class="nav nav-tabs" role="tablist">
@@ -200,13 +201,14 @@
             </div>
 
             <div role="tabpanel" class="tab-pane " style="margin-left: 1em;" id="tab_detalle">
+                
 
 
                 <div class="row">
                     <div class="col-md-12">
                         <div class="col-md-1">
                             <div class="form-group">
-                                <button type="button" class="btn btn-primary form-control" onclick="BuscarFacturas()" title="Buscar deudas">
+                                <button type="button" class="btn btn-primary form-control"id="btn_buscar" onclick="MostrarModalFacturas();" title="Buscar deudas">
                                     <i class="fa fa-search"></i>
                                 </button>
                             </div>
