--- a/ERP/Core.Erp.Web/Areas/General/Views/Sucursal/Anular.cshtml
+++ b/ERP/Core.Erp.Web/Areas/General/Views/Sucursal/Anular.cshtml
@@ -24,16 +24,28 @@
             </div>
             <div class="col-md-2">
                 <div class="form-group">
-                    <label for="Su_CodigoEstablecimiento">Establecimiento</label>
-                    @Html.TextBoxFor(q => q.Su_CodigoEstablecimiento, new { @class = "form-control" })
+                    @Html.DevExpress().CheckBoxFor(q => q.Es_establecimiento, settings =>
+                            {
+                                settings.Name = "Es_establecimiento";
+                                settings.Text = "Es establecimiento ";
+
+                            }).GetHtml()
+                    @Html.ValidationMessageFor(q => q.Es_establecimiento, "", new { @class = "text-danger" })
                 </div>
             </div>
-            <div class="col-md-8">
+            <div class="col-md-2">
                 <div class="form-group">
                     <div class="checkbox">
                         @Html.CheckBoxFor(q => q.Es_establecimiento)
                         <label for="Es_establecimiento">Es establecimiento</label>
                     </div>
+                </div>
+            </div>
+            <div class="col-md-6">
+                <div class="form-group">
+                    <label for="IdCtaCble_cxp">Cuenta contable por pagar</label>
+                    @Html.Partial("_CmbCuenta_Sucursal", Model)
+                    @Html.ValidationMessageFor(m => m.IdCtaCble_cxp, "", new { @class = "text-danger" })
                 </div>
             </div>
         </div>
